Buttons are shown in the system font <http://dev.earthli.com/projects/view_job.php?id=2144>

--- a/site/resources/styles/core/core_forms.css
+++ b/site/resources/styles/core/core_forms.css
@@ -57,6 +57,13 @@ select
   padding: 4px;
 }
 
+button,
+.text-control, .text-control-required,
+.menu-control, .menu-control-required
+{
+  font-family: inherit;
+}
+
 input[type="radio"], input[type="checkbox"]
 {
 	vertical-align: middle;
