--- a/site/resources/styles/fonts/geneva.css
+++ b/site/resources/styles/fonts/geneva.css
@@ -1,6 +1,4 @@
-body,
-.text-control, .text-control-required,
-.menu-control, .menu-control-required
+body
 {
 	font-family: Geneva, Arial, Helvetica, san-serif
 }
