--- a/site/resources/styles/fonts/segoe.css
+++ b/site/resources/styles/fonts/segoe.css
@@ -1,6 +1,4 @@
-body,
-.text-control, .text-control-required,
-.menu-control, .menu-control-required
+body
 {
 	font-family: Segoe UI, Segoe WP, Helvetica Neue, Roboto, sans-serif
 }
