--- a/site/resources/styles/fonts/antic.css
+++ b/site/resources/styles/fonts/antic.css
@@ -1,8 +1,6 @@
 @import "http://fonts.googleapis.com/css?family=Antic";
 
-body,
-.text-control, .text-control-required,
-.menu-control, .menu-control-required
+body
 {
 	font-family: 'Antic', Verdana, Arial, Helvetica, san-serif;
 }
