--- a/site/resources/styles/fonts/cousine.css
+++ b/site/resources/styles/fonts/cousine.css
@@ -1,8 +1,6 @@
 @import "http://fonts.googleapis.com/css?family=Cousine";
 
-body,
-.text-control, .text-control-required,
-.menu-control, .menu-control-required
+body
 {
 	font-family: "Cousine", "Courier New", Courier, mono
 }
