--- a/site/resources/styles/fonts/georgia.css
+++ b/site/resources/styles/fonts/georgia.css
@@ -1,6 +1,4 @@
-body,
-.text-control, .text-control-required,
-.menu-control, .menu-control-required
+body
 {
 	font-family: Georgia, Times New Roman, Times, serif
 }
