--- a/site/resources/styles/fonts/open-sans.css
+++ b/site/resources/styles/fonts/open-sans.css
@@ -1,8 +1,6 @@
 @import "http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700";
 
-body,
-.text-control, .text-control-required,
-.menu-control, .menu-control-required
+body
 {
 	font-family: 'Open Sans', Verdana, Arial, Helvetica, san-serif;
 }
