--- a/site/resources/styles/fonts/trebuchet.css
+++ b/site/resources/styles/fonts/trebuchet.css
@@ -1,6 +1,4 @@
-body,
-.text-control, .text-control-required,
-.menu-control, .menu-control-required
+body
 {
 	font-family: "trebuchet ms", lucida, verdana, helvetica
 }
