--- a/site/resources/styles/fonts/verdana.css
+++ b/site/resources/styles/fonts/verdana.css
@@ -1,6 +1,4 @@
-body,
-.text-control, .text-control-required,
-.menu-control, .menu-control-required
+body
 {
 	font-family: Verdana, Arial, Helvetica, sans-serif
 }
