--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -690,6 +690,12 @@ ul.menu,
   padding: 0;
 }
 
+ul.menu-buttons,
+.text-flow > ul.menu-buttons
+{
+  display: inline;
+}
+
 ul.menu-items > li,
 .text-flow ul.menu-items > li
 {
