Remove center-alignment style from auto-caption class in CSS <http://http://earthli.com/projects/view_job.php?id=2145>

--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -1213,15 +1213,13 @@ blockquote p:first-child, .side-bar-body p:first-child, .chart-body p:first-chil
 .auto-content-inline
 {
   display: block;
-  text-align: center;  
 }
 
 .auto-content-caption
 {
   font-size: 85%;
-  padding-top: .5em;
+  padding-top: 5px;
   display: block;
-  text-align: center;
 }
 
 .footnote-number 
