--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -198,13 +198,14 @@ var, kbd
 kbd
 {
   display: inline-block;
+  font-family: monospace;
   background-color: #FAFAFA;
   border-radius: 4px;
   border: 1px solid #CCCCCC;
   border-bottom: medium none #FFFFFF;
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.196), 0 0 0 1px #FFFFFF inset;
   color: #444444;
-  padding: 2px 5px;
+  padding: 0 5px;
   white-space: nowrap;
   margin-bottom: 5px;
 }
