--- a/site/resources/themes/eggplant_forms.css
+++ b/site/resources/themes/eggplant_forms.css
@@ -24,7 +24,7 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-.text-control, .menu-control, .button-control, .text-control-required
+.text-control, .menu-control, .text-control-required
 {
 	color: #DDCCBB;
 	background: #664466;
