--- a/site/resources/themes/alien_forms.css
+++ b/site/resources/themes/alien_forms.css
@@ -24,29 +24,14 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-.button-control
-{
-	background-color: #444444;
-	padding: 2px;
-	border: 1px solid #666666;
-	color: white;
-}
-
-.button-control:active, .button-control:hover
-{
-	background-color: #666666;
-	color: #FFFF00;
-	border: 1px #ff9933 solid;
-}
-
-.menu-control, .text-control, .text-control-required, .menu-control-required
+.menu-control, .text-control
 {
 	background: #000000;
 	color: #BBEE88;
 	border: 1px solid #666666;
 }
 
-.menu-control:focus, .text-control:focus, .text-control-required:focus, .menu-control-required:focus
+.menu-control:focus, .text-control:focus
 {
 	border: 1px #ff9933 solid;
 }
