--- a/site/resources/themes/desert_forms.css
+++ b/site/resources/themes/desert_forms.css
@@ -24,17 +24,7 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-.button-control
-{
-	background: #CEC0A8;
-}
-
-.button-control:hover, .button-control:active
-{
-	background-color: #FFFFFF;
-}
-
-.text-control, .menu-control, .text-control-required
+.text-control, .menu-control
 {
 	background: #CEC0A8;
 }
