--- a/site/resources/themes/galaxy_forms.css
+++ b/site/resources/themes/galaxy_forms.css
@@ -24,19 +24,7 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-.button-control
-{
-	background: #000000;
-	border: 1px #999999 solid;
-}
-
-.button-control:hover, .button-control:active
-{
-	background-color: #666666;
-	color: #FFFF00;
-}
-
-.text-control, .menu-control, .menu-control-required, .text-control-required
+.text-control, .menu-control
 {
 	background: #000000;
 	color: #FF9933;
