--- a/site/resources/themes/osx_panther_forms.css
+++ b/site/resources/themes/osx_panther_forms.css
@@ -24,31 +24,10 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-.button-control:hover, .button-control:active
-{
-	background: url(osx/20_percent_white.png) repeat;
-}
-
-.button-control
-{
-	background: none;
-	border: 1px solid #333333;
-	border-top-color: #CCCCCC;
-	border-left-color: #CCCCCC;
-}
-
 .text-control, .menu-control
 {
 	background: #DDDDDD;
 	border: 1px solid #333333;
 	border-bottom-color: #CCCCCC;
-	border-right-color: #CCCCCC;	;
-}
-
-.text-control-required
-{
-	background: #FFFFFF;
-	border: 1px solid #333333;
-	border-bottom-color: #CCCCCC;
-	border-right-color: #CCCCCC;	;
+	border-right-color: #CCCCCC;
 }
