--- a/site/resources/themes/slate_forms.css
+++ b/site/resources/themes/slate_forms.css
@@ -24,29 +24,19 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-.button-control
-{
-	border-color: #666666;
-}
-
-.button-control:active, .button-control:hover, .button-control:focus
-{
-	background-color: #000000;
-}
-
 .checkbox-control
 {
 	background: #000040;
 }
 
-.text-control, .menu-control, .text-control-required
+.text-control, .menu-control
 {
 	color: #CC9933;
 	background-color: #333333;
 	border-color: #666666;
 }
 
-.text-control-required
+.text-control.required
 {
 	background-color: #222222;
 }
