--- a/site/resources/themes/sunshine_forms.css
+++ b/site/resources/themes/sunshine_forms.css
@@ -24,18 +24,10 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-.button-control
+.text-control, .menu-control
 {
-	background-color: #FFFFAA;
+  color: #003399;
+  background: #FFFFAA;
 }
 
-.button-control:hover, .button-control:active
-{
-	background-color: white;
-}
 
-.text-control, .menu-control, .text-control-required
-{
-	color: #003399;
-	background: #FFFFAA;
-}
