Minor updates to the beach and continental styles

--- a/site/resources/themes/blue_tan.css
+++ b/site/resources/themes/blue_tan.css
@@ -70,8 +70,10 @@ body
   background-color: #FFFFFF;
 }
 
-.preview-title, .chart-title
+.chart-title
 {
+  margin-left: -15px;
+  padding-left: 15px;
 	color: #336699;
 	border-bottom: 1px dotted #999999;
 }
