--- a/site/resources/themes/alien.css
+++ b/site/resources/themes/alien.css
@@ -242,3 +242,15 @@ th
 	color: #ff9933;
 	font-style: italic;
 }
+
+.menu-control, .text-control
+{
+  background: #000000;
+  color: #BBEE88;
+  border: 1px solid #666666;
+}
+
+.menu-control:focus, .text-control:focus
+{
+  border: 1px #ff9933 solid;
+}
