--- a/site/resources/themes/galaxy.css
+++ b/site/resources/themes/galaxy.css
@@ -170,3 +170,10 @@ th
 {
 	color: #CC6600;
 }
+
+.text-control, .menu-control
+{
+  background: #000000;
+  color: #FF9933;
+  border: 1px solid #666666;
+}
