Fix all themes to fit the new UX <http://earthli.com/projects/view_job.php?id=2122>

--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -273,7 +273,6 @@ pre > code
 .banner 
 {
   padding-top: 15px;
-  padding-right: 15px;
   padding-left: 15px;
 }
 
@@ -314,27 +313,43 @@ pre > code
   font-weight: bold;
 }
 
+.banner-title .newsfeed
+{
+  display: inline-block;
+}
+
+.icon-container .banner-title
+{
+  margin-right: 65px;
+}
+
+.icon-container .login-status
+{
+  margin-right: 65px;
+}
+
 .banner-icon
 {
   width: 50px;
   height: 50px;
-  float: right;
+  display: inline-block;
+  position: absolute;
+  right: 0;
+  bottom: 10px;
   margin-left: 15px;
   background-repeat: no-repeat;
 }
 
 .login-status 
 {
-  
+  margin-top: 10px;
 }
 
 .nav-box
 {
   margin-top: 15px;
   margin-left: -15px;
-  margin-right: -15px;
   padding-left: 15px;
-  padding-right: 15px;
   padding-bottom: 5px;
   border-bottom: 1px solid #CCC;
 }
@@ -380,7 +395,6 @@ pre > code
 .footer
 {
   clear: both;
-  padding-right: 15px;
   padding-left: 15px;
   margin-top: 15px;
   border-top: 1px solid #CCC;
@@ -504,7 +518,7 @@ pre > code
 
 .chart, .preview
 {
-  border-left: 2px solid silver; /* frame */
+  border-left: 2px solid silver;
   padding-left: 15px;
   margin: 15px 0;
 }
@@ -525,8 +539,6 @@ pre > code
 
 .chart-title
 {
-  padding: 5px 0;
-  font-weight: bold;
 }
 
 .object-in-list
@@ -668,7 +680,7 @@ table.basic > tbody > tr > td.empty-label
 
 .icon
 {
-  display: inline-block;
+  display: inline;
   background-repeat: no-repeat;
 }
 
@@ -752,6 +764,7 @@ ul.menu .menu-group-title
 {
   padding: .6em .5em;
   border-bottom: 1px dotted #CCC;
+  cursor: default;
 }
 
 .menu-item
@@ -786,10 +799,15 @@ ul.menu li:last-child .menu-item:hover
   border-bottom-color: transparent;
 }
 
+ul.menu li:first-child .menu-item:hover
+{
+  border-top-color: transparent;
+}
+
 .menu-item-description
 {
   display: block;
-  margin: 5px 0 15px 0;
+  margin: 5px 0 0 0;
   color: black;
   width: 200px;
   white-space: normal;
@@ -897,7 +915,7 @@ ul.menu li:last-child .menu-item:hover
 
 /* @group Pagination */
 
-.paginator
+.pager
 {
   margin-top: 15px;
 }
@@ -946,6 +964,12 @@ a.button:link, a.button:visited
 {
   color: #AAA;
   border-color: #DDD;
+  cursor: default;
+}
+
+.button.selected
+{
+  cursor: default;
 }
 
 .button img
@@ -954,26 +978,26 @@ a.button:link, a.button:visited
   top: 2px;
 }
 
-.paginator .button
+.pager .button
 {
   width: 2.2em;
   height: 2.2em;
 }
 
-.paginator .counters
+.pager .counters
 {
   margin: 0 10px;
   display: inline-block;
   text-align: center;
 }
 
-.paginator .disabled
+.pager .disabled
 {
   background: #EEEEEE;
   color: #AAAAAA;
 }
 
-.paginator .selected
+.pager .selected
 {
   background-color: #666666;
   color: white;
@@ -1102,7 +1126,6 @@ a.button:link, a.button:visited
 
 .selected 
 {
-  font-weight: bold;
 }
 
 .locked
@@ -1110,45 +1133,52 @@ a.button:link, a.button:visited
   color: #999999;
 }
 
-.error 
+.caution, .warning, .error
 {
-  background-color: #FFEAEA;
-  border: 1px dotted #A00000;
   padding: 5px;
   margin-left: -5px;
-  margin-right: -5px;
-  color: #A00000;
+  border: 1px dotted #666;
 }
 
-span.error 
+.error
 {
-  padding: 1px;
+  background-color: #FFEAEA;
+  border-color: #A00000;
+  color: #A00000;
 }
 
 .warning 
 {
-  background-color: #EBAE39;
+  background-color: #ebc76d;
   color: #000000;
-  border: 1px dotted #A06000;
-  padding: 3px;
-  font-style: italic;
+  border-color: #A06000;
 }
 
 .caution 
 {
   background-color: #FFFFCC;
   color: #000000;
-  border: 1px dotted #A0A000;
-  padding: 3px;
-  font-style: italic;
+  border-color: #A0A000;
 }
 
-.caution a:link, .caution a:visited, .warning a:link, .warning a:visited 
+span.error, span.caution, span.warning
+{
+  padding: 1px;
+}
+
+.caution a:link,
+.caution a:visited,
+.warning a:link,
+.warning a:visited,
+.error a:link,
+.error a:visited
 {
   color: #0066FF;
 }
 
-.caution a:hover, .warning a:hover 
+.caution a:hover,
+.warning a:hover,
+.error a:hover
 {
   background-color: transparent;
   color: #CC0000;
