--- a/site/resources/themes/midnight.css
+++ b/site/resources/themes/midnight.css
@@ -30,62 +30,36 @@ body
 	background-color: #000000;
 }
 
-.page
+.nav-box,
+.footer,
+.top-box
 {
-	max-width: 800px;
-	margin: auto;
+	border-color: #444;
 }
 
-.banner, .footer
+a:link, a:visited
 {
-	border: 0px solid #666666;
-}
-
-.banner
-{
-	border-bottom-width: 1px;
-}
-
-.footer
-{
-	border-top-width: 1px;
-}
-
-.nav-box
-{
-	border-width: 0px;
-}
-
-a:visited
-{
-	color: #6CBCF9;
-}
-
-a:link
-{
-	color: #6CBCF9;
+  color: #05aae5;
 }
 
 a:active, a:hover
 {
-	color: #FFFF00;
+	color: #55cffb;
 }
 
-.box
+.chart-title
 {
-	border-width: 0px;
+	color: #79cc36;
 }
 
-.box-title, .side-bar-title, .chart-title
+.quote-block,
+.preview,
+.chart,
+pre > code,
+.left-sidebar,
+.right-sidebar
 {
-	color: #FFFF00;
-	border-width: 0px;
-}
-
-.side-bar, .chart, .form-basic, .quote-block
-{
-	border: 1px dotted #444444;
-	background-color: #080808;
+  border-color: #666;
 }
 
 .cell-non-empty
@@ -95,25 +69,46 @@ a:active, a:hover
 
 .cell-selected, .cell-highlight
 {
-	border-color: #666666;
-	background-color: #333333;
+	border-color: #444;
+	background-color: #222;
 }
 
 .horizontal-separator, .vertical-separator
 {
-	border-color: #999999;
+	border-color: #444;
 }
 
 h2
 {
-	background-color: #222222;
-	border: 1px solid #666666;
-	padding-left: 3px;
+  color: #79cc36;
+  border-bottom: 1px dotted #333;
+}
+
+h1, h3
+{
+  color: #ffc31c;
 }
 
 th
 {
 	border-bottom-color: #FFFFFF;
+}
+
+.caution
+{
+  background-color: #c2e8a4;
+  border-color: #90b571;
+}
+
+.warning
+{
+  background-color: #ffe7a6;
+  border-color: #ccb473;
+}
+
+.error
+{
+  background-color: #dfc7ff;
 }
 
 .frame
@@ -133,7 +128,16 @@ th
 
 .highlight
 {
-	color: #FF0000;
+	color: #dfc7ff;
+}
+
+.selected
+{
+  /*
+  light-green: #c2e8a4
+  light-orange: #ffe7a6
+  light-purple: #dfc7ff
+  */
 }
 
 .object-in-list, .info-box-top, .info-box-bottom
@@ -146,49 +150,72 @@ th
 	color: #CCCCCC;
 }
 
-.quote-block
-{
-	padding: .5em;
-}
-
 .locked a:link, .locked a:visited
 {
 	color: #6699CC;
 }
 
+.button
+{
+  background-color: #222;
+  border-color: #444;
+  color: #999;
+}
+
+a.button:link, a.button:visited
+{
+  color: #aaa;
+}
+
+.button.selected
+{
+  color: white;
+}
+
+.button.disabled
+{
+  border-color: #222;
+  color: #666;
+  background-color: #111;
+}
+
+.button:hover:not(.disabled):not(.selected)
+{
+  background-color: #444;
+}
+
 .menu
 {
-	background: #111111;
-	border-color: #666666;
+	background: #111;
+	border-color: #666;
+}
+
+ul.menu .menu-group-title
+{
+  background-color: #444;
+  border-color: #222;
 }
 
 .menu-item
 {
-	border-top: 1px solid transparent;
-	border-bottom: 1px solid transparent;
+  background-color: #444;
 }
 
 .menu-item:hover
 {
 	background: #333333;
-	border-top: 1px dotted #666666;
-	border-bottom: 1px dotted #666666;
+	border-top: 1px dotted #666;
+	border-bottom: 1px dotted #666;
 }
 
-.menu-button
+.menu-item-description
 {
-	border: 1px dotted #444444;
-}
-
-.menu-button:hover
-{
-	border: 1px dotted #999999;
-	background: #333333;
+  color: white;
 }
 
 .menu-control, .text-control
 {
-  background: #000000 ;
-  color: #0099FF;
+  background: #000000;
+  color: #05aae5;
   border: 1px solid #666666;
 }
