--- a/site/resources/themes/osx.css
+++ b/site/resources/themes/osx.css
@@ -44,38 +44,15 @@ code
 	color: #008000;
 }
 
-.page
-{
-	max-width: 800px;
-	margin: auto;
-}
-
 h2
 {
 	color: #666666;
 	border-bottom-color: #666666;
 }
 
-th
-{
-	border-bottom: 1px solid #666666;
-}
-
 .banner-title
 {
 	color: #999999;
-}
-
-.box
-{
-	border-width: 0px;
-}
-
-.box-title
-{
-	border-width: 0px;
-	text-align: center;
-	font-weight: normal;
 }
 
 .cell-non-empty
@@ -139,20 +116,13 @@ th
 	color: #666666;
 }
 
-.quote-block
-{
-	border: 1px solid #999999;
-	padding: .5em;
-	background: white;
-}
-
-.side-bar, .nav-box, .chart, .preview
+.nav-box, .chart, .preview
 {
 	background: url(osx/5_percent_black.png) repeat;
 	border: 1px solid #999999;
 }
 
-.form-basic, .info-box-top, .info-box-bottom, .form-basic-block
+.form-basic-block
 {
 	border: 1px solid #333333;
 	border-bottom-color: #CCCCCC;
@@ -163,15 +133,15 @@ th
 
 .chart-title
 {
-	text-align: center;
 	color: white;
-	border-width: 0px;
 	background: url(osx/5_percent_black.png) repeat;
+  margin-left: -5px;
+  padding-left: 5px;
 }
 
 .side-bar-title, .preview-title
 {
-	border-width: 0px;
+	border-width: 0;
 }
 
 .object-in-list
@@ -179,52 +149,22 @@ th
 	border-color: #888888;
 }
 
-.menu
+ul.menu
 {
 	border: 1px solid;
 	border-color: #CCCCCC #666666 #666666 #CCCCCC;
 	background: transparent url(osx/80_percent_white.png);
 }
 
-.menu-ie a:link a:visited, .menu a:link, .menu a:visited
-{
-	color: #0066CC;
-}
-
-.menu-ie a:link a:visited, .menu a:active, .menu a:hover
-{
-	color: #33AA66;
-}
-
-.menu
+ul.menu
 {
 	border: 1px solid #AAAAAA;
-}
-
-.menu-item
-{
-	padding-top: 5px;
-	padding-bottom: 5px;
 }
 
 .menu-item:hover
 {
-	padding-top: 4px;
-	padding-bottom: 4px;
 	background: url(osx/5_percent_black.png);
-	border-top: 1px solid #AAAAAA;
-	border-bottom: 1px solid #AAAAAA;
-}
-
-.menu-button
-{
-	border: 1px solid #CCCCCC;
-}
-
-.menu-button:hover
-{
-	border: 1px solid #AAAAAA;
-	background: url(osx/5_percent_black.png);
+	border-color: #AAAAAA;
 }
 
 .text-control
