--- a/site/resources/themes/sea.css
+++ b/site/resources/themes/sea.css
@@ -47,7 +47,7 @@ body
 
 .nav-box
 {
-	border-width: 0px;
+	border-width: 0;
 }
 
 a:link, a:visited
@@ -77,7 +77,7 @@ th
 
 .box
 {
-	border-width: 0px;
+	border-width: 0;
 }
 
 .box-title
@@ -95,24 +95,38 @@ th
 
 .side-bar, .chart
 {
-	border-width: 0px;
+	border-width: 0;
 }
 
 .side-bar-title, .chart-title, .preview-title
 {
 	color: #99CC66;
-	border-bottom-width: 0px;
+	border-bottom-width: 0;
 }
 
-.form-basic, .preview, .info-box-top, .info-box-bottom, .quote-block
+.preview
 {
-	border: 1px solid #2C8CB9;
+  border-left: 1px solid #2C8CB9;
+}
+
+.info-box-top
+{
+  border-bottom: 1px solid #2C8CB9;
+}
+
+.info-box-bottom
+{
+  border-top: 1px solid #2C8CB9;
+}
+
+.quote-block
+{
 	background-color: #395a93;
 }
 
 .callout
 {
-	border-width: 0px;
+	border-width: 0;
 	border-bottom: 2px solid #1C6CA9;
 }
 
@@ -133,7 +147,7 @@ th
 
 .menu-bar-top, .menu-bar-bottom
 {
-	border-width: 0px;
+	border-width: 0;
 }
 
 .error
@@ -212,6 +226,11 @@ th
   border-color: #000066 #698aC3 #698aC3 #000066;
   background-color: #496aA3;
   color: #CCCCCC;
+}
+
+.text-control::selection
+{
+  background-color: red;
 }
 
 .text-control.required
