--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -313,9 +313,11 @@ pre > code
   font-weight: bold;
 }
 
-.banner-title .newsfeed
+.newsfeed
 {
   display: inline-block;
+  padding: 10px;
+  margin: -10px;
 }
 
 .icon-container .banner-title
@@ -350,7 +352,7 @@ pre > code
   margin-top: 15px;
   margin-left: -15px;
   padding-left: 15px;
-  padding-bottom: 5px;
+  padding-bottom: 15px;
   border-bottom: 1px solid #CCC;
 }
 
@@ -398,7 +400,7 @@ pre > code
   padding-left: 15px;
   margin-top: 15px;
   border-top: 1px solid #CCC;
-  padding-top: 5px;
+  padding-top: 15px;
 }
 
 .footer-data
