Updated table border for midnight style to match other borders (default of silver overridden with #666)

--- a/site/resources/themes/midnight.css
+++ b/site/resources/themes/midnight.css
@@ -30,6 +30,12 @@ body
 	background-color: #000000;
 }
 
+table.columns > tbody > tr > td,
+table.columns > tbody > tr > th
+{
+  border-color: #666666;
+}
+
 .nav-box,
 .footer,
 .top-box
